EBP-212 fix manifest path

--- a/comwrap/ibexa-base-config/0.1/manifest.json
+++ b/comwrap/ibexa-base-config/0.1/manifest.json
@@ -1,7 +1,7 @@
 {
   "copy-from-package": {
-    "src/config/": "%CONFIG_DIR%/",
-    "src/migrations/": "%MIGRATION_DIR%",
-    "src/templates/blueprint": "%TEMPLATES_DIR"
+    "src/config/": "%CONFIG_DIR%/packages/",
+    "src/migrations/": "%MIGRATION_DIR%/",
+    "src/templates/": "%TEMPLATES_DIR%/"
   }
 }
