--- a/comwrap/ibexa-core-components/2.0/manifest.json
+++ b/comwrap/ibexa-core-components/2.0/manifest.json
@@ -1,6 +1,6 @@
 {
   "copy-from-package": {
     "config/": "%CONFIG_DIR%/packages/",
-    "src/migrations/": "%MIGRATION_DIR%/"
+    "migrations/": "%MIGRATION_DIR%/"
   }
 }
