EBP-215 fix destination folder

--- a/comwrap/ibexa-docker-stack/0.2/manifest.json
+++ b/comwrap/ibexa-docker-stack/0.2/manifest.json
@@ -1,6 +1,6 @@
 {
   "copy-from-package": {
-    "src/doc/": "/",
+    "src/doc": "/",
     "src/bin/vhost.sh": "%BIN_DIR%/vhost.sh"
   },
   "env": {
