--- a/comwrap/ibexa-docker-stack/0.2/manifest.json
+++ b/comwrap/ibexa-docker-stack/0.2/manifest.json
@@ -21,6 +21,7 @@
     "DATABASE_PLATFORM": "mysql",
     "DATABASE_DRIVER": "pdo_mysql",
     "DATABASE_VERSION": "mariadb-10.3.0",
-    "DATABASE_URL": "${DATABASE_PLATFORM}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?serverVersion=${DATABASE_VERSION}"
+    "DATABASE_URL": "${DATABASE_PLATFORM}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?serverVersion=${DATABASE_VERSION}",
+    "SOLR_CORE": "collection1"
   }
 }
