--- a/comwrap/ibexa-base-config/0.1/manifest.json
+++ b/comwrap/ibexa-base-config/0.1/manifest.json
@@ -3,5 +3,8 @@
     "src/config/": "%CONFIG_DIR%/packages/",
     "src/migrations/": "%MIGRATION_DIR%/",
     "src/templates/": "%TEMPLATES_DIR%/"
-  }
+  },
+  "gitignore": [
+    ".env"
+  ]
 }
